# collaborative-board-backend

./: .env  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  deploy.sh
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
bindings/: ClientMessage.ts  GetDocMessage.ts  QueryAIMessage.ts
docker/: compose.yml
migrations/2025-07-30-114034_create_updates_table/: down.sql  up.sql
server/: collab.service
src/: config.rs  constants.rs  health.rs  main.rs
src/ai/: get_feedback.rs  mod.rs  queries.rs  router.rs
src/infra/: db.rs
src/infra/db/: db.rs  schema.rs  setup.rs
src/models/: doc_update.rs  mod.rs
src/ws/: doc_service.rs  handler.rs  message.rs  mod.rs  room.rs  ws_codec.rs
src/ws/doc_service/: state_doc.rs
src/ws/service/: get_doc.rs  join_room.rs  mod.rs  query_ai.rs  update_doc.rs  update_tmp_state.rs
utils/db/: clean_db.sql
